--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!-- public/index.html -->
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-app>
 <head>
     <meta charset="UTF-8">
     <base href="/">
@@ -12,17 +12,17 @@
     <link rel="stylesheet" href="css/style.css"> <!-- custom styles -->
 
     <!-- JS -->
-    <script src="libs/angular/angular.min.js"></script>
-    <script src="libs/angular-route/angular-route.min.js"></script>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
     <!-- ANGULAR CUSTOM -->
-    <script src="js/controllers/MainCtrl.js"></script>
-    <script src="js/controllers/NerdCtrl.js"></script>
-    <script src="js/services/NerdService.js"></script>
+    <script src="js/controllers/BestCtrl.js"></script>
+    <script src="js/controllers/UserCtrl.js"></script>
+    <script src="js/services/UserService.js"></script>
     <script src="js/appRoutes.js"></script>
     <script src="js/app.js"></script>
 </head>
-<body ng-app="sampleApp" ng-controller="NerdController">
+<body>
+<!-- <body ng-controller="UserController as user"> -->
 <div class="container">
 
     <!-- HEADER -->
@@ -33,7 +33,7 @@
 
         <!-- LINK TO OUR PAGES. ANGULAR HANDLES THE ROUTING HERE -->
         <ul class="nav navbar-nav">
-            <li><a href="/users">Users</a></li>
+            <li><a href="/index">Map</a></li>
         </ul>
     </nav>
 
