--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,10 @@
-<!-- public/index.html -->
 <!doctype html>
 <html lang="en" ng-app>
 <head>
     <meta charset="UTF-8">
     <base href="/">
 
-    <title>Starter Node and Angular</title>
+    <title></title>
 
     <!-- CSS -->
 
@@ -28,7 +27,7 @@
     <!-- HEADER -->
     <nav class="navbar navbar-inverse">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/">Stencil: Node and Angular</a>
+            <a class="navbar-brand" href="/"></a>
         </div>
 
         <!-- LINK TO OUR PAGES. ANGULAR HANDLES THE ROUTING HERE -->
