--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
     <script src="js/services/UserService.js"></script>
     <script src="js/appRoutes.js"></script>
     <script src="js/app.js"></script>
+    <link href="./splash.css" rel="stylesheet" type="text/css">
+   <link href='http://fonts.googleapis.com/css?family=IM+Fell+French+Canon' rel='stylesheet' type='text/css'>
 </head>
 <body>
 <!-- <body ng-controller="UserController as user"> -->
@@ -31,9 +33,9 @@
         </div>
 
         <!-- LINK TO OUR PAGES. ANGULAR HANDLES THE ROUTING HERE -->
-        <ul class="nav navbar-nav">
-            <li><a href="/index">Map</a></li>
-        </ul>
+        <span>
+            <a href="/map">Discover the Best of NYC </a>
+        </span>
     </nav>
 
     <!-- ANGULAR DYNAMIC CONTENT -->
