splash page tweaks

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <script src="js/appRoutes.js"></script>
     <script src="js/app.js"></script>
     <link href="./splash.css" rel="stylesheet" type="text/css">
-   <link href='http://fonts.googleapis.com/css?family=IM+Fell+French+Canon' rel='stylesheet' type='text/css'>
+   <link href='http://fonts.googleapis.com/css?family=IM+Fell+French+Canon:400italic|Averia+Serif+Libre:700' rel='stylesheet' type='text/css'>
 </head>
 <body>
 <!-- <body ng-controller="UserController as user"> -->
@@ -31,9 +31,9 @@
         <div class="navbar-header">
             <a class="navbar-brand" href="/"></a>
         </div>
-
-        <!-- LINK TO OUR PAGES. ANGULAR HANDLES THE ROUTING HERE -->
+        <h1>TasteBuds</h1>
         <span>
+
             <a href="/map">Discover the Best of NYC </a>
         </span>
     </nav>
