alters result display

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
         <h1>TasteBuds</h1>
         <span>
 
-            <a href="/map">Discover the Best of NYC </a>
+            <a href="/login">Discover the Best of NYC </a>
         </span>
     </nav>
 
